# regos-sentinel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MOTION_DECK_PROGRESS.md  PHASE_PLAN.md  PRODUCT.md  README.md  RESEARCH_JUL12_GAPS_INNOVATIONS_DECK.md  SECURITY.md  SUBMISSION_PACKAGE.md  approach-refinement.md  build_plan.md  flagship_project.md  idea-crucible.md  idea_scorecard.md  idea_validation.md  judge_pitch.md  research-delta-v3.md  research.md  sebi_hackathon_institutional_research.md  winning_product_build_spec.md
.github/: CODEOWNERS  (+2 more)
regos-sentinel/services/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
regos-sentinel/services/api/app/: __init__.py  advisory.py  answers.py  assurance.py  canonical.py  cci.py  corpus.py  documents.py  engine.py  main.py  metrics.py  model_cache.py  models.py  oscal.py  report.py  revision.py  scenarios.py  seed.py  source_verification.py  store.py
regos-sentinel/services/api/app/agents/: __init__.py  crew.py  orchestrator.py  planner.py  runtime.py  tools.py
regos-sentinel/services/api/app/datasets/: prototype_gold_set.json
regos-sentinel/services/api/app/model/: __init__.py  classifier.py  dataset.py  train.py  weights.json
regos-sentinel/services/api/app/model_cache/: aster-cscrf-q15-q17.json
regos-sentinel/services/api/scripts/: measure_prototype.py  refresh_model_cache.py  replay_build.py  verify_manifest.py  verify_offline_fallback.py
regos-sentinel/services/api/tests/: test_advisory.py  test_agents.py  test_cci_and_answers.py  test_documents.py  test_metrics.py  test_model.py  test_scenarios.py  test_workflow.py
(+164 files in other folders)
